[gd_scene load_steps=10 format=4 uid="uid://c4kerx7igi33w"]

[ext_resource type="PackedScene" uid="uid://cbbfxf83lknfq" path="res://scenes/knight.tscn" id="1_gdyuf"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_o1srd"]
[ext_resource type="Texture2D" uid="uid://dfu67hanocx7y" path="res://sprites/locations/dungeon/Dungeon Tile Set.png" id="2_0ryg2"]
[ext_resource type="PackedScene" uid="uid://62t2005fchbn" path="res://scenes/zidane.tscn" id="3_qb37m"]
[ext_resource type="PackedScene" uid="uid://diksjuhs82jqo" path="res://scenes/hpbar.tscn" id="4_sblbn"]
[ext_resource type="Script" path="res://scripts/frame_data_bar.gd" id="6_lrnrk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6s6ue"]
texture = ExtResource("2_0ryg2")
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:10/0 = 0
3:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_2gpjr"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_6s6ue")

[sub_resource type="LabelSettings" id="LabelSettings_q2cft"]
font_size = 20
shadow_size = 2

[node name="world" type="Node2D"]
script = ExtResource("1_o1srd")

[node name="Layer0" type="TileMapLayer" parent="."]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAMAAAABAAIAAAAAAAQAAAABAAIAAAABAAMAAAAHAAYAAAABAAQAAAAHAAcAAAAAAAUAAAABAAIAAAAAAAYAAAABAAIAAAABAAUAAAAHAAYAAAABAAYAAAAHAAcAAAAAAAcAAAABAAIAAAAAAAgAAAABAAIAAAABAAcAAAAHAAYAAAABAAgAAAAHAAcAAAAAAAkAAAABAAIAAAAAAAoAAAABAAIAAAABAAkAAAAHAAYAAAABAAoAAAAHAAcAAAAAAAsAAAABAAIAAAAAAAwAAAABAAIAAAABAAsAAAAHAAYAAAABAAwAAAAHAAcAAAAAAA0AAAABAAIAAAAAAA4AAAABAAIAAAABAA0AAAAHAAYAAAABAA4AAAAHAAcAAAAAAA8AAAABAAIAAAAAABAAAAABAAIAAAABAA8AAAAHAAYAAAABABAAAAAHAAcAAAAAABEAAAABAAIAAAAAABIAAAABAAIAAAABABEAAAAHAAYAAAABABIAAAAHAAcAAAAAABMAAAABAAIAAAAAABQAAAABAAIAAAABABMAAAAHAAYAAAABABQAAAAHAAcAAAAAABUAAAABAAIAAAAAABYAAAABAAIAAAABABUAAAAHAAYAAAABABYAAAAHAAcAAAAAABcAAAABAAIAAAAAABgAAAABAAIAAAABABcAAAAHAAYAAAABABgAAAAHAAcAAAAAABkAAAABAAIAAAAAABoAAAABAAIAAAABABkAAAAHAAYAAAABABoAAAAHAAcAAAAAABsAAAACAAEAAAAAABwAAAADAAIAAAABABsAAAACAAEAAAABABwAAAAJAAMAAAAAAB0AAAADAAIAAAABAB0AAAAJAAMAAAACAAMAAAAGAAYAAAACAAQAAAAGAAcAAAADAAMAAAAHAAYAAAADAAQAAAAHAAcAAAACAAUAAAAGAAYAAAACAAYAAAAGAAcAAAADAAUAAAAHAAYAAAADAAYAAAAHAAcAAAACAAcAAAAGAAYAAAACAAgAAAAGAAcAAAADAAcAAAAHAAYAAAADAAgAAAAHAAcAAAACAAkAAAAGAAYAAAACAAoAAAAGAAcAAAADAAkAAAAHAAYAAAADAAoAAAAHAAcAAAACAAsAAAAGAAYAAAACAAwAAAAGAAcAAAADAAsAAAAHAAYAAAADAAwAAAAHAAcAAAACAA0AAAAGAAYAAAACAA4AAAAGAAcAAAADAA0AAAAHAAYAAAADAA4AAAAHAAcAAAACAA8AAAAGAAYAAAACABAAAAAGAAcAAAADAA8AAAAHAAYAAAADABAAAAAHAAcAAAACABEAAAAGAAYAAAACABIAAAAGAAcAAAADABEAAAAHAAYAAAADABIAAAAHAAcAAAACABMAAAAGAAYAAAACABQAAAAGAAcAAAADABMAAAAHAAYAAAADABQAAAAHAAcAAAACABUAAAAGAAYAAAACABYAAAAGAAcAAAADABUAAAAHAAYAAAADABYAAAAHAAcAAAACABcAAAAGAAYAAAACABgAAAAGAAcAAAADABcAAAAHAAYAAAADABgAAAAHAAcAAAACABkAAAAGAAYAAAACABoAAAAGAAcAAAADABkAAAAHAAYAAAADABoAAAAHAAcAAAACABsAAAACAAEAAAACABwAAAAJAAMAAAADABsAAAACAAEAAAADABwAAAAJAAMAAAACAB0AAAAJAAMAAAADAB0AAAAJAAMAAAAEAAMAAAAGAAYAAAAEAAQAAAAGAAcAAAAFAAMAAAAHAAYAAAAFAAQAAAAHAAcAAAAEAAUAAAAGAAYAAAAEAAYAAAAGAAcAAAAFAAUAAAAHAAYAAAAFAAYAAAAHAAcAAAAEAAcAAAAGAAYAAAAEAAgAAAAGAAcAAAAFAAcAAAAHAAYAAAAFAAgAAAAHAAcAAAAEAAkAAAAGAAYAAAAEAAoAAAAGAAcAAAAFAAkAAAAHAAYAAAAFAAoAAAAHAAcAAAAEAAsAAAAGAAYAAAAEAAwAAAAGAAcAAAAFAAsAAAAHAAYAAAAFAAwAAAAHAAcAAAAEAA0AAAAGAAYAAAAEAA4AAAAGAAcAAAAFAA0AAAAHAAYAAAAFAA4AAAAHAAcAAAAEAA8AAAAGAAYAAAAEABAAAAAGAAcAAAAFAA8AAAAHAAYAAAAFABAAAAAHAAcAAAAEABEAAAAGAAYAAAAEABIAAAAGAAcAAAAFABEAAAAHAAYAAAAFABIAAAAHAAcAAAAEABMAAAAGAAYAAAAEABQAAAAGAAcAAAAFABMAAAAHAAYAAAAFABQAAAAHAAcAAAAEABUAAAAGAAYAAAAEABYAAAAGAAcAAAAFABUAAAAHAAYAAAAFABYAAAAHAAcAAAAEABcAAAAGAAYAAAAEABgAAAAGAAcAAAAFABcAAAAHAAYAAAAFABgAAAAHAAcAAAAEABkAAAAGAAYAAAAEABoAAAAGAAcAAAAFABkAAAAHAAYAAAAFABoAAAAHAAcAAAAEABsAAAACAAEAAAAEABwAAAAJAAMAAAAFABsAAAACAAEAAAAFABwAAAAJAAMAAAAEAB0AAAAJAAMAAAAFAB0AAAAJAAMAAAAGAAMAAAAGAAYAAAAGAAQAAAAGAAcAAAAHAAMAAAAHAAYAAAAHAAQAAAAHAAcAAAAGAAUAAAAGAAYAAAAGAAYAAAAGAAcAAAAHAAUAAAAHAAYAAAAHAAYAAAAHAAcAAAAGAAcAAAAGAAYAAAAGAAgAAAAGAAcAAAAHAAcAAAAHAAYAAAAHAAgAAAAHAAcAAAAGAAkAAAAGAAYAAAAGAAoAAAAGAAcAAAAHAAkAAAAHAAYAAAAHAAoAAAAHAAcAAAAGAAsAAAAGAAYAAAAGAAwAAAAGAAcAAAAHAAsAAAAHAAYAAAAHAAwAAAAHAAcAAAAGAA0AAAAGAAYAAAAGAA4AAAAGAAcAAAAHAA0AAAAHAAYAAAAHAA4AAAAHAAcAAAAGAA8AAAAGAAYAAAAGABAAAAAGAAcAAAAHAA8AAAAHAAYAAAAHABAAAAAHAAcAAAAGABEAAAAGAAYAAAAGABIAAAAGAAcAAAAHABEAAAAHAAYAAAAHABIAAAAHAAcAAAAGABMAAAAGAAYAAAAGABQAAAAGAAcAAAAHABMAAAAHAAYAAAAHABQAAAAHAAcAAAAGABUAAAAGAAYAAAAGABYAAAAGAAcAAAAHABUAAAAHAAYAAAAHABYAAAAHAAcAAAAGABcAAAAGAAYAAAAGABgAAAAGAAcAAAAHABcAAAAHAAYAAAAHABgAAAAHAAcAAAAGABkAAAAGAAYAAAAGABoAAAAGAAcAAAAHABkAAAAHAAYAAAAHABoAAAAHAAcAAAAGABsAAAACAAEAAAAGABwAAAAJAAMAAAAHABsAAAACAAEAAAAHABwAAAAJAAMAAAAGAB0AAAAJAAMAAAAHAB0AAAAJAAMAAAAIAAMAAAAGAAYAAAAIAAQAAAAGAAcAAAAJAAMAAAAHAAYAAAAJAAQAAAAHAAcAAAAIAAUAAAAGAAYAAAAIAAYAAAAGAAcAAAAJAAUAAAAHAAYAAAAJAAYAAAAHAAcAAAAIAAcAAAAGAAYAAAAIAAgAAAAGAAcAAAAJAAcAAAAHAAYAAAAJAAgAAAAHAAcAAAAIAAkAAAAGAAYAAAAIAAoAAAAGAAcAAAAJAAkAAAAHAAYAAAAJAAoAAAAHAAcAAAAIAAsAAAAGAAYAAAAIAAwAAAAGAAcAAAAJAAsAAAAHAAYAAAAJAAwAAAAHAAcAAAAIAA0AAAAGAAYAAAAIAA4AAAAGAAcAAAAJAA0AAAAHAAYAAAAJAA4AAAAHAAcAAAAIAA8AAAAGAAYAAAAIABAAAAAGAAcAAAAJAA8AAAAHAAYAAAAJABAAAAAHAAcAAAAIABEAAAAGAAYAAAAIABIAAAAGAAcAAAAJABEAAAAHAAYAAAAJABIAAAAHAAcAAAAIABMAAAAGAAYAAAAIABQAAAAGAAcAAAAJABMAAAAHAAYAAAAJABQAAAAHAAcAAAAIABUAAAAGAAYAAAAIABYAAAAGAAcAAAAJABUAAAAHAAYAAAAJABYAAAAHAAcAAAAIABcAAAAGAAYAAAAIABgAAAAGAAcAAAAJABcAAAAHAAYAAAAJABgAAAAHAAcAAAAIABkAAAAGAAYAAAAIABoAAAAGAAcAAAAJABkAAAAHAAYAAAAJABoAAAAHAAcAAAAIABsAAAACAAEAAAAIABwAAAAJAAIAAAAJABsAAAACAAEAAAAJABwAAAAJAAIAAAAIAB0AAAAJAAIAAAAJAB0AAAAJAAIAAAAKAAMAAAAGAAYAAAAKAAQAAAAGAAcAAAALAAMAAAAHAAYAAAALAAQAAAAHAAcAAAAKAAUAAAAGAAYAAAAKAAYAAAAGAAcAAAALAAUAAAAHAAYAAAALAAYAAAAHAAcAAAAKAAcAAAAGAAYAAAAKAAgAAAAGAAcAAAALAAcAAAAHAAYAAAALAAgAAAAHAAcAAAAKAAkAAAAGAAYAAAAKAAoAAAAGAAcAAAALAAkAAAAHAAYAAAALAAoAAAAHAAcAAAAKAAsAAAAGAAYAAAAKAAwAAAAGAAcAAAALAAsAAAAHAAYAAAALAAwAAAAHAAcAAAAKAA0AAAAGAAYAAAAKAA4AAAAGAAcAAAALAA0AAAAHAAYAAAALAA4AAAAHAAcAAAAKAA8AAAAGAAYAAAAKABAAAAAGAAcAAAALAA8AAAAHAAYAAAALABAAAAAHAAcAAAAKABEAAAAGAAYAAAAKABIAAAAGAAcAAAALABEAAAAHAAYAAAALABIAAAAHAAcAAAAKABMAAAAGAAYAAAAKABQAAAAGAAcAAAALABMAAAAHAAYAAAALABQAAAAHAAcAAAAKABUAAAAGAAYAAAAKABYAAAAGAAcAAAALABUAAAAHAAYAAAALABYAAAAHAAcAAAAKABcAAAAGAAYAAAAKABgAAAAGAAcAAAALABcAAAAHAAYAAAALABgAAAAHAAcAAAAKABkAAAAGAAYAAAAKABoAAAAGAAcAAAALABkAAAAHAAYAAAALABoAAAAHAAcAAAAKABsAAAACAAEAAAAKABwAAAAJAAIAAAALABsAAAACAAEAAAALABwAAAAJAAIAAAAKAB0AAAAJAAIAAAALAB0AAAAJAAIAAAAMAAMAAAAGAAYAAAAMAAQAAAAGAAcAAAANAAMAAAAHAAYAAAANAAQAAAAHAAcAAAAMAAUAAAAGAAYAAAAMAAYAAAAGAAcAAAANAAUAAAAHAAYAAAANAAYAAAAHAAcAAAAMAAcAAAAGAAYAAAAMAAgAAAAGAAcAAAANAAcAAAAHAAYAAAANAAgAAAAHAAcAAAAMAAkAAAAGAAYAAAAMAAoAAAAGAAcAAAANAAkAAAAHAAYAAAANAAoAAAAHAAcAAAAMAAsAAAAGAAYAAAAMAAwAAAAGAAcAAAANAAsAAAAHAAYAAAANAAwAAAAHAAcAAAAMAA0AAAAGAAYAAAAMAA4AAAAGAAcAAAANAA0AAAAHAAYAAAANAA4AAAAHAAcAAAAMAA8AAAAGAAYAAAAMABAAAAAGAAcAAAANAA8AAAAHAAYAAAANABAAAAAHAAcAAAAMABEAAAAGAAYAAAAMABIAAAAGAAcAAAANABEAAAAHAAYAAAANABIAAAAHAAcAAAAMABMAAAAGAAYAAAAMABQAAAAGAAcAAAANABMAAAAHAAYAAAANABQAAAAHAAcAAAAMABUAAAAGAAYAAAAMABYAAAAGAAcAAAANABUAAAAHAAYAAAANABYAAAAHAAcAAAAMABcAAAAGAAYAAAAMABgAAAAGAAcAAAANABcAAAAHAAYAAAANABgAAAAHAAcAAAAMABkAAAAGAAYAAAAMABoAAAAGAAcAAAANABkAAAAHAAYAAAANABoAAAAHAAcAAAAMABsAAAACAAEAAAAMABwAAAAJAAIAAAANABsAAAACAAEAAAANABwAAAAJAAIAAAAMAB0AAAAJAAIAAAANAB0AAAAJAAIAAAAOAAMAAAAGAAYAAAAOAAQAAAAGAAcAAAAPAAMAAAAHAAYAAAAPAAQAAAAHAAcAAAAOAAUAAAAGAAYAAAAOAAYAAAAGAAcAAAAPAAUAAAAHAAYAAAAPAAYAAAAHAAcAAAAOAAcAAAAGAAYAAAAOAAgAAAAGAAcAAAAPAAcAAAAHAAYAAAAPAAgAAAAHAAcAAAAOAAkAAAAGAAYAAAAOAAoAAAAGAAcAAAAPAAkAAAAHAAYAAAAPAAoAAAAHAAcAAAAOAAsAAAAGAAYAAAAOAAwAAAAGAAcAAAAPAAsAAAAHAAYAAAAPAAwAAAAHAAcAAAAOAA0AAAAGAAYAAAAOAA4AAAAGAAcAAAAPAA0AAAAHAAYAAAAPAA4AAAAHAAcAAAAOAA8AAAAGAAYAAAAOABAAAAAGAAcAAAAPAA8AAAAHAAYAAAAPABAAAAAHAAcAAAAOABEAAAAGAAYAAAAOABIAAAAGAAcAAAAPABEAAAAHAAYAAAAPABIAAAAHAAcAAAAOABMAAAAGAAYAAAAOABQAAAAGAAcAAAAPABMAAAAHAAYAAAAPABQAAAAHAAcAAAAOABUAAAAGAAYAAAAOABYAAAAGAAcAAAAPABUAAAAHAAYAAAAPABYAAAAHAAcAAAAOABcAAAAGAAYAAAAOABgAAAAGAAcAAAAPABcAAAAHAAYAAAAPABgAAAAHAAcAAAAOABkAAAAGAAYAAAAOABoAAAAGAAcAAAAPABkAAAAHAAYAAAAPABoAAAAHAAcAAAAOABsAAAACAAEAAAAOABwAAAAJAAIAAAAPABsAAAACAAEAAAAPABwAAAAJAAIAAAAOAB0AAAAJAAIAAAAPAB0AAAAJAAIAAAAQAAMAAAAGAAYAAAAQAAQAAAAGAAcAAAARAAMAAAAHAAYAAAARAAQAAAAHAAcAAAAQAAUAAAAGAAYAAAAQAAYAAAAGAAcAAAARAAUAAAAHAAYAAAARAAYAAAAHAAcAAAAQAAcAAAAGAAYAAAAQAAgAAAAGAAcAAAARAAcAAAAHAAYAAAARAAgAAAAHAAcAAAAQAAkAAAAGAAYAAAAQAAoAAAAGAAcAAAARAAkAAAAHAAYAAAARAAoAAAAHAAcAAAAQAAsAAAAGAAYAAAAQAAwAAAAGAAcAAAARAAsAAAAHAAYAAAARAAwAAAAHAAcAAAAQAA0AAAAGAAYAAAAQAA4AAAAGAAcAAAARAA0AAAAHAAYAAAARAA4AAAAHAAcAAAAQAA8AAAAGAAYAAAAQABAAAAAGAAcAAAARAA8AAAAHAAYAAAARABAAAAAHAAcAAAAQABEAAAAGAAYAAAAQABIAAAAGAAcAAAARABEAAAAHAAYAAAARABIAAAAHAAcAAAAQABMAAAAGAAYAAAAQABQAAAAGAAcAAAARABMAAAAHAAYAAAARABQAAAAHAAcAAAAQABUAAAAGAAYAAAAQABYAAAAGAAcAAAARABUAAAAHAAYAAAARABYAAAAHAAcAAAAQABcAAAAGAAYAAAAQABgAAAAGAAcAAAARABcAAAAHAAYAAAARABgAAAAHAAcAAAAQABkAAAAGAAYAAAAQABoAAAAGAAcAAAARABkAAAAHAAYAAAARABoAAAAHAAcAAAAQABsAAAACAAEAAAAQABwAAAAJAAIAAAARABsAAAACAAEAAAARABwAAAAJAAIAAAAQAB0AAAAJAAIAAAARAB0AAAAJAAIAAAASAAMAAAAGAAYAAAASAAQAAAAGAAcAAAATAAMAAAAHAAYAAAATAAQAAAAHAAcAAAASAAUAAAAGAAYAAAASAAYAAAAGAAcAAAATAAUAAAAHAAYAAAATAAYAAAAHAAcAAAASAAcAAAAGAAYAAAASAAgAAAAGAAcAAAATAAcAAAAHAAYAAAATAAgAAAAHAAcAAAASAAkAAAAGAAYAAAASAAoAAAAGAAcAAAATAAkAAAAHAAYAAAATAAoAAAAHAAcAAAASAAsAAAAGAAYAAAASAAwAAAAGAAcAAAATAAsAAAAHAAYAAAATAAwAAAAHAAcAAAASAA0AAAAGAAYAAAASAA4AAAAGAAcAAAATAA0AAAAHAAYAAAATAA4AAAAHAAcAAAASAA8AAAAGAAYAAAASABAAAAAGAAcAAAATAA8AAAAHAAYAAAATABAAAAAHAAcAAAASABEAAAAGAAYAAAASABIAAAAGAAcAAAATABEAAAAHAAYAAAATABIAAAAHAAcAAAASABMAAAAGAAYAAAASABQAAAAGAAcAAAATABMAAAAHAAYAAAATABQAAAAHAAcAAAASABUAAAAGAAYAAAASABYAAAAGAAcAAAATABUAAAAHAAYAAAATABYAAAAHAAcAAAASABcAAAAGAAYAAAASABgAAAAGAAcAAAATABcAAAAHAAYAAAATABgAAAAHAAcAAAASABkAAAAGAAYAAAASABoAAAAGAAcAAAATABkAAAAHAAYAAAATABoAAAAHAAcAAAASABsAAAACAAEAAAASABwAAAAJAAIAAAATABsAAAACAAEAAAATABwAAAAJAAIAAAASAB0AAAAJAAIAAAATAB0AAAAJAAIAAAAUAAMAAAAGAAYAAAAUAAQAAAAGAAcAAAAVAAMAAAAHAAYAAAAVAAQAAAAHAAcAAAAUAAUAAAAGAAYAAAAUAAYAAAAGAAcAAAAVAAUAAAAHAAYAAAAVAAYAAAAHAAcAAAAUAAcAAAAGAAYAAAAUAAgAAAAGAAcAAAAVAAcAAAAHAAYAAAAVAAgAAAAHAAcAAAAUAAkAAAAGAAYAAAAUAAoAAAAGAAcAAAAVAAkAAAAHAAYAAAAVAAoAAAAHAAcAAAAUAAsAAAAGAAYAAAAUAAwAAAAGAAcAAAAVAAsAAAAHAAYAAAAVAAwAAAAHAAcAAAAUAA0AAAAGAAYAAAAUAA4AAAAGAAcAAAAVAA0AAAAHAAYAAAAVAA4AAAAHAAcAAAAUAA8AAAAGAAYAAAAUABAAAAAGAAcAAAAVAA8AAAAHAAYAAAAVABAAAAAHAAcAAAAUABEAAAAGAAYAAAAUABIAAAAGAAcAAAAVABEAAAAHAAYAAAAVABIAAAAHAAcAAAAUABMAAAAGAAYAAAAUABQAAAAGAAcAAAAVABMAAAAHAAYAAAAVABQAAAAHAAcAAAAUABUAAAAGAAYAAAAUABYAAAAGAAcAAAAVABUAAAAHAAYAAAAVABYAAAAHAAcAAAAUABcAAAAGAAYAAAAUABgAAAAGAAcAAAAVABcAAAAHAAYAAAAVABgAAAAHAAcAAAAUABkAAAAGAAYAAAAUABoAAAAGAAcAAAAVABkAAAAHAAYAAAAVABoAAAAHAAcAAAAUABsAAAACAAEAAAAUABwAAAAJAAIAAAAVABsAAAACAAEAAAAVABwAAAAJAAIAAAAUAB0AAAAJAAIAAAAVAB0AAAAJAAIAAAAWAAMAAAAGAAYAAAAWAAQAAAAGAAcAAAAXAAMAAAAHAAYAAAAXAAQAAAAHAAcAAAAWAAUAAAAGAAYAAAAWAAYAAAAGAAcAAAAXAAUAAAAHAAYAAAAXAAYAAAAHAAcAAAAWAAcAAAAGAAYAAAAWAAgAAAAGAAcAAAAXAAcAAAAHAAYAAAAXAAgAAAAHAAcAAAAWAAkAAAAGAAYAAAAWAAoAAAAGAAcAAAAXAAkAAAAHAAYAAAAXAAoAAAAHAAcAAAAWAAsAAAAGAAYAAAAWAAwAAAAGAAcAAAAXAAsAAAAHAAYAAAAXAAwAAAAHAAcAAAAWAA0AAAAGAAYAAAAWAA4AAAAGAAcAAAAXAA0AAAAHAAYAAAAXAA4AAAAHAAcAAAAWAA8AAAAGAAYAAAAWABAAAAAGAAcAAAAXAA8AAAAHAAYAAAAXABAAAAAHAAcAAAAWABEAAAAGAAYAAAAWABIAAAAGAAcAAAAXABEAAAAHAAYAAAAXABIAAAAHAAcAAAAWABMAAAAGAAYAAAAWABQAAAAGAAcAAAAXABMAAAAHAAYAAAAXABQAAAAHAAcAAAAWABUAAAAGAAYAAAAWABYAAAAGAAcAAAAXABUAAAAHAAYAAAAXABYAAAAHAAcAAAAWABcAAAAGAAYAAAAWABgAAAAGAAcAAAAXABcAAAAHAAYAAAAXABgAAAAHAAcAAAAWABkAAAAGAAYAAAAWABoAAAAGAAcAAAAXABkAAAAHAAYAAAAXABoAAAAHAAcAAAAWABsAAAACAAEAAAAWABwAAAAJAAIAAAAXABsAAAACAAEAAAAXABwAAAAJAAIAAAAWAB0AAAAJAAIAAAAXAB0AAAAJAAIAAAAYAAMAAAAGAAYAAAAYAAQAAAAGAAcAAAAZAAMAAAAHAAYAAAAZAAQAAAAHAAcAAAAYAAUAAAAGAAYAAAAYAAYAAAAGAAcAAAAZAAUAAAAHAAYAAAAZAAYAAAAHAAcAAAAYAAcAAAAGAAYAAAAYAAgAAAAGAAcAAAAZAAcAAAAHAAYAAAAZAAgAAAAHAAcAAAAYAAkAAAAGAAYAAAAYAAoAAAAGAAcAAAAZAAkAAAAHAAYAAAAZAAoAAAAHAAcAAAAYAAsAAAAGAAYAAAAYAAwAAAAGAAcAAAAZAAsAAAAHAAYAAAAZAAwAAAAHAAcAAAAYAA0AAAAGAAYAAAAYAA4AAAAGAAcAAAAZAA0AAAAHAAYAAAAZAA4AAAAHAAcAAAAYAA8AAAAGAAYAAAAYABAAAAAGAAcAAAAZAA8AAAAHAAYAAAAZABAAAAAHAAcAAAAYABEAAAAGAAYAAAAYABIAAAAGAAcAAAAZABEAAAAHAAYAAAAZABIAAAAHAAcAAAAYABMAAAAGAAYAAAAYABQAAAAGAAcAAAAZABMAAAAHAAYAAAAZABQAAAAHAAcAAAAYABUAAAAGAAYAAAAYABYAAAAGAAcAAAAZABUAAAAHAAYAAAAZABYAAAAHAAcAAAAYABcAAAAGAAYAAAAYABgAAAAGAAcAAAAZABcAAAAHAAYAAAAZABgAAAAHAAcAAAAYABkAAAAGAAYAAAAYABoAAAAGAAcAAAAZABkAAAAHAAYAAAAZABoAAAAHAAcAAAAYABsAAAACAAEAAAAYABwAAAAJAAIAAAAZABsAAAACAAEAAAAZABwAAAAJAAIAAAAYAB0AAAAJAAIAAAAZAB0AAAAJAAIAAAAaAAMAAAAGAAYAAAAaAAQAAAAGAAcAAAAbAAMAAAAHAAYAAAAbAAQAAAAHAAcAAAAaAAUAAAAGAAYAAAAaAAYAAAAGAAcAAAAbAAUAAAAHAAYAAAAbAAYAAAAHAAcAAAAaAAcAAAAGAAYAAAAaAAgAAAAGAAcAAAAbAAcAAAAHAAYAAAAbAAgAAAAHAAcAAAAaAAkAAAAGAAYAAAAaAAoAAAAGAAcAAAAbAAkAAAAHAAYAAAAbAAoAAAAHAAcAAAAaAAsAAAAGAAYAAAAaAAwAAAAGAAcAAAAbAAsAAAAHAAYAAAAbAAwAAAAHAAcAAAAaAA0AAAAGAAYAAAAaAA4AAAAGAAcAAAAbAA0AAAAHAAYAAAAbAA4AAAAHAAcAAAAaAA8AAAAGAAYAAAAaABAAAAAGAAcAAAAbAA8AAAAHAAYAAAAbABAAAAAHAAcAAAAaABEAAAAGAAYAAAAaABIAAAAGAAcAAAAbABEAAAAHAAYAAAAbABIAAAAHAAcAAAAaABMAAAAGAAYAAAAaABQAAAAGAAcAAAAbABMAAAAHAAYAAAAbABQAAAAHAAcAAAAaABUAAAAGAAYAAAAaABYAAAAGAAcAAAAbABUAAAAHAAYAAAAbABYAAAAHAAcAAAAaABcAAAAGAAYAAAAaABgAAAAGAAcAAAAbABcAAAAHAAYAAAAbABgAAAAHAAcAAAAaABkAAAAGAAYAAAAaABoAAAAGAAcAAAAbABkAAAAHAAYAAAAbABoAAAAHAAcAAAAaABsAAAACAAEAAAAaABwAAAAJAAIAAAAbABsAAAACAAEAAAAbABwAAAAJAAIAAAAaAB0AAAAJAAIAAAAbAB0AAAAJAAIAAAAcAAMAAAAGAAYAAAAcAAQAAAAGAAcAAAAdAAMAAAAHAAYAAAAdAAQAAAAHAAcAAAAcAAUAAAAGAAYAAAAcAAYAAAAGAAcAAAAdAAUAAAAHAAYAAAAdAAYAAAAHAAcAAAAcAAcAAAAGAAYAAAAcAAgAAAAGAAcAAAAdAAcAAAAHAAYAAAAdAAgAAAAHAAcAAAAcAAkAAAAGAAYAAAAcAAoAAAAGAAcAAAAdAAkAAAAHAAYAAAAdAAoAAAAHAAcAAAAcAAsAAAAGAAYAAAAcAAwAAAAGAAcAAAAdAAsAAAAHAAYAAAAdAAwAAAAHAAcAAAAcAA0AAAAGAAYAAAAcAA4AAAAGAAcAAAAdAA0AAAAHAAYAAAAdAA4AAAAHAAcAAAAcAA8AAAAGAAYAAAAcABAAAAAGAAcAAAAdAA8AAAAHAAYAAAAdABAAAAAHAAcAAAAcABEAAAAGAAYAAAAcABIAAAAGAAcAAAAdABEAAAAHAAYAAAAdABIAAAAHAAcAAAAcABMAAAAGAAYAAAAcABQAAAAGAAcAAAAdABMAAAAHAAYAAAAdABQAAAAHAAcAAAAcABUAAAAGAAYAAAAcABYAAAAGAAcAAAAdABUAAAAHAAYAAAAdABYAAAAHAAcAAAAcABcAAAAGAAYAAAAcABgAAAAGAAcAAAAdABcAAAAHAAYAAAAdABgAAAAHAAcAAAAcABkAAAAGAAYAAAAcABoAAAAGAAcAAAAdABkAAAAHAAYAAAAdABoAAAAHAAcAAAAcABsAAAACAAEAAAAcABwAAAAJAAIAAAAdABsAAAACAAEAAAAdABwAAAAJAAIAAAAcAB0AAAAJAAIAAAAdAB0AAAAJAAIAAAAeAAMAAAAGAAYAAAAeAAQAAAAGAAcAAAAfAAMAAAAHAAYAAAAfAAQAAAAHAAcAAAAeAAUAAAAGAAYAAAAeAAYAAAAGAAcAAAAfAAUAAAAHAAYAAAAfAAYAAAAHAAcAAAAeAAcAAAAGAAYAAAAeAAgAAAAGAAcAAAAfAAcAAAAHAAYAAAAfAAgAAAAHAAcAAAAeAAkAAAAGAAYAAAAeAAoAAAAGAAcAAAAfAAkAAAAHAAYAAAAfAAoAAAAHAAcAAAAeAAsAAAAGAAYAAAAeAAwAAAAGAAcAAAAfAAsAAAAHAAYAAAAfAAwAAAAHAAcAAAAeAA0AAAAGAAYAAAAeAA4AAAAGAAcAAAAfAA0AAAAHAAYAAAAfAA4AAAAHAAcAAAAeAA8AAAAGAAYAAAAeABAAAAAGAAcAAAAfAA8AAAAHAAYAAAAfABAAAAAHAAcAAAAeABEAAAAGAAYAAAAeABIAAAAGAAcAAAAfABEAAAAHAAYAAAAfABIAAAAHAAcAAAAeABMAAAAGAAYAAAAeABQAAAAGAAcAAAAfABMAAAAHAAYAAAAfABQAAAAHAAcAAAAeABUAAAAGAAYAAAAeABYAAAAGAAcAAAAfABUAAAAHAAYAAAAfABYAAAAHAAcAAAAeABcAAAAGAAYAAAAeABgAAAAGAAcAAAAfABcAAAAHAAYAAAAfABgAAAAHAAcAAAAeABkAAAAGAAYAAAAeABoAAAAGAAcAAAAfABkAAAAHAAYAAAAfABoAAAAHAAcAAAAeABsAAAACAAEAAAAeABwAAAAJAAIAAAAfABsAAAACAAEAAAAfABwAAAAJAAIAAAAeAB0AAAAJAAIAAAAfAB0AAAAJAAIAAAAgAAMAAAAGAAYAAAAgAAQAAAAGAAcAAAAhAAMAAAAHAAYAAAAhAAQAAAAHAAcAAAAgAAUAAAAGAAYAAAAgAAYAAAAGAAcAAAAhAAUAAAAHAAYAAAAhAAYAAAAHAAcAAAAgAAcAAAAGAAYAAAAgAAgAAAAGAAcAAAAhAAcAAAAHAAYAAAAhAAgAAAAHAAcAAAAgAAkAAAAGAAYAAAAgAAoAAAAGAAcAAAAhAAkAAAAHAAYAAAAhAAoAAAAHAAcAAAAgAAsAAAAGAAYAAAAgAAwAAAAGAAcAAAAhAAsAAAAHAAYAAAAhAAwAAAAHAAcAAAAgAA0AAAAGAAYAAAAgAA4AAAAGAAcAAAAhAA0AAAAHAAYAAAAhAA4AAAAHAAcAAAAgAA8AAAAGAAYAAAAgABAAAAAGAAcAAAAhAA8AAAAHAAYAAAAhABAAAAAHAAcAAAAgABEAAAAGAAYAAAAgABIAAAAGAAcAAAAhABEAAAAHAAYAAAAhABIAAAAHAAcAAAAgABMAAAAGAAYAAAAgABQAAAAGAAcAAAAhABMAAAAHAAYAAAAhABQAAAAHAAcAAAAgABUAAAAGAAYAAAAgABYAAAAGAAcAAAAhABUAAAAHAAYAAAAhABYAAAAHAAcAAAAgABcAAAAGAAYAAAAgABgAAAAGAAcAAAAhABcAAAAHAAYAAAAhABgAAAAHAAcAAAAgABkAAAAGAAYAAAAgABoAAAAGAAcAAAAhABkAAAAHAAYAAAAhABoAAAAHAAcAAAAgABsAAAACAAEAAAAgABwAAAAJAAIAAAAhABsAAAACAAEAAAAhABwAAAAJAAIAAAAgAB0AAAAJAAIAAAAhAB0AAAAJAAIAAAAiAAMAAAAGAAYAAAAiAAQAAAAGAAcAAAAjAAMAAAAHAAYAAAAjAAQAAAAHAAcAAAAiAAUAAAAGAAYAAAAiAAYAAAAGAAcAAAAjAAUAAAAHAAYAAAAjAAYAAAAHAAcAAAAiAAcAAAAGAAYAAAAiAAgAAAAGAAcAAAAjAAcAAAAHAAYAAAAjAAgAAAAHAAcAAAAiAAkAAAAGAAYAAAAiAAoAAAAGAAcAAAAjAAkAAAAHAAYAAAAjAAoAAAAHAAcAAAAiAAsAAAAGAAYAAAAiAAwAAAAGAAcAAAAjAAsAAAAHAAYAAAAjAAwAAAAHAAcAAAAiAA0AAAAGAAYAAAAiAA4AAAAGAAcAAAAjAA0AAAAHAAYAAAAjAA4AAAAHAAcAAAAiAA8AAAAGAAYAAAAiABAAAAAGAAcAAAAjAA8AAAAHAAYAAAAjABAAAAAHAAcAAAAiABEAAAAGAAYAAAAiABIAAAAGAAcAAAAjABEAAAAHAAYAAAAjABIAAAAHAAcAAAAiABMAAAAGAAYAAAAiABQAAAAGAAcAAAAjABMAAAAHAAYAAAAjABQAAAAHAAcAAAAiABUAAAAGAAYAAAAiABYAAAAGAAcAAAAjABUAAAAHAAYAAAAjABYAAAAHAAcAAAAiABcAAAAGAAYAAAAiABgAAAAGAAcAAAAjABcAAAAHAAYAAAAjABgAAAAHAAcAAAAiABkAAAAGAAYAAAAiABoAAAAGAAcAAAAjABkAAAAHAAYAAAAjABoAAAAHAAcAAAAiABsAAAACAAEAAAAiABwAAAAJAAIAAAAjABsAAAACAAEAAAAjABwAAAAJAAIAAAAiAB0AAAAJAAIAAAAjAB0AAAAJAAIAAAAkAAMAAAAGAAYAAAAkAAQAAAAGAAcAAAAlAAMAAAAHAAYAAAAlAAQAAAAHAAcAAAAkAAUAAAAGAAYAAAAkAAYAAAAGAAcAAAAlAAUAAAAHAAYAAAAlAAYAAAAHAAcAAAAkAAcAAAAGAAYAAAAkAAgAAAAGAAcAAAAlAAcAAAAHAAYAAAAlAAgAAAAHAAcAAAAkAAkAAAAGAAYAAAAkAAoAAAAGAAcAAAAlAAkAAAAHAAYAAAAlAAoAAAAHAAcAAAAkAAsAAAAGAAYAAAAkAAwAAAAGAAcAAAAlAAsAAAAHAAYAAAAlAAwAAAAHAAcAAAAkAA0AAAAGAAYAAAAkAA4AAAAGAAcAAAAlAA0AAAAHAAYAAAAlAA4AAAAHAAcAAAAkAA8AAAAGAAYAAAAkABAAAAAGAAcAAAAlAA8AAAAHAAYAAAAlABAAAAAHAAcAAAAkABEAAAAGAAYAAAAkABIAAAAGAAcAAAAlABEAAAAHAAYAAAAlABIAAAAHAAcAAAAkABMAAAAGAAYAAAAkABQAAAAGAAcAAAAlABMAAAAHAAYAAAAlABQAAAAHAAcAAAAkABUAAAAGAAYAAAAkABYAAAAGAAcAAAAlABUAAAAHAAYAAAAlABYAAAAHAAcAAAAkABcAAAAGAAYAAAAkABgAAAAGAAcAAAAlABcAAAAHAAYAAAAlABgAAAAHAAcAAAAkABkAAAAGAAYAAAAkABoAAAAGAAcAAAAlABkAAAAHAAYAAAAlABoAAAAHAAcAAAAkABsAAAACAAEAAAAkABwAAAAJAAIAAAAlABsAAAACAAEAAAAlABwAAAAJAAIAAAAkAB0AAAAJAAIAAAAlAB0AAAAJAAIAAAAmAAMAAAAGAAYAAAAmAAQAAAAGAAcAAAAnAAMAAAADAAIAAAAnAAQAAAADAAIAAAAmAAUAAAAGAAYAAAAmAAYAAAAGAAcAAAAnAAUAAAADAAIAAAAnAAYAAAADAAIAAAAmAAcAAAAGAAYAAAAmAAgAAAAGAAcAAAAnAAcAAAADAAIAAAAnAAgAAAADAAIAAAAmAAkAAAAGAAYAAAAmAAoAAAAGAAcAAAAnAAkAAAADAAIAAAAnAAoAAAADAAIAAAAmAAsAAAAGAAYAAAAmAAwAAAAGAAcAAAAnAAsAAAADAAIAAAAnAAwAAAADAAIAAAAmAA0AAAAGAAYAAAAmAA4AAAAGAAcAAAAnAA0AAAADAAIAAAAnAA4AAAADAAIAAAAmAA8AAAAGAAYAAAAmABAAAAAGAAcAAAAnAA8AAAADAAIAAAAnABAAAAADAAIAAAAmABEAAAAGAAYAAAAmABIAAAAGAAcAAAAnABEAAAADAAIAAAAnABIAAAADAAIAAAAmABMAAAAGAAYAAAAmABQAAAAGAAcAAAAnABMAAAADAAIAAAAnABQAAAADAAIAAAAmABUAAAAGAAYAAAAmABYAAAAGAAcAAAAnABUAAAADAAIAAAAnABYAAAADAAIAAAAmABcAAAAGAAYAAAAmABgAAAAGAAcAAAAnABcAAAADAAIAAAAnABgAAAADAAIAAAAmABkAAAAGAAYAAAAmABoAAAAGAAcAAAAnABkAAAADAAIAAAAnABoAAAADAAIAAAAmABsAAAACAAEAAAAmABwAAAAJAAIAAAAnABsAAAADAAIAAAAnABwAAAADAAIAAAAmAB0AAAAJAAIAAAAnAB0AAAADAAIAAAAoAAMAAAABAAIAAAAoAAQAAAABAAIAAAAoAAUAAAADAAIAAAAoAAYAAAADAAIAAAAoAAcAAAADAAIAAAAoAAgAAAADAAIAAAAoAAkAAAADAAIAAAAoAAoAAAADAAIAAAAoAAsAAAADAAIAAAAoAAwAAAADAAIAAAAoAA0AAAADAAIAAAAoAA4AAAADAAIAAAAoAA8AAAADAAIAAAAoABAAAAADAAIAAAAoABEAAAADAAIAAAAoABIAAAADAAIAAAAoABMAAAADAAIAAAAoABQAAAADAAIAAAAoABUAAAADAAIAAAAoABYAAAADAAIAAAAoABcAAAADAAIAAAAoABoAAAADAAIAAAAoABsAAAADAAIAAAAoABwAAAADAAIAAAAoAB0AAAADAAIAAAAAAAAAAAABAAIAAAAAAAEAAAABAAIAAAAAAAIAAAABAAIAAAABAAAAAAACAAMAAAACAAAAAAACAAMAAAABAAEAAAAGAAYAAAABAAIAAAAGAAcAAAACAAEAAAAHAAYAAAACAAIAAAAHAAcAAAADAAAAAAACAAMAAAAEAAAAAAACAAMAAAADAAEAAAAGAAYAAAADAAIAAAAGAAcAAAAEAAEAAAAHAAYAAAAEAAIAAAAHAAcAAAAFAAAAAAACAAMAAAAGAAAAAAACAAMAAAAFAAEAAAAGAAYAAAAFAAIAAAAGAAcAAAAGAAEAAAAHAAYAAAAGAAIAAAAHAAcAAAAHAAAAAAACAAMAAAAIAAAAAAACAAMAAAAHAAEAAAAGAAYAAAAHAAIAAAAGAAcAAAAIAAEAAAAHAAYAAAAIAAIAAAAHAAcAAAAJAAAAAAACAAMAAAAKAAAAAAACAAMAAAAJAAEAAAAGAAYAAAAJAAIAAAAGAAcAAAAKAAEAAAAHAAYAAAAKAAIAAAAHAAcAAAALAAAAAAACAAMAAAAMAAAAAAACAAMAAAALAAEAAAAGAAYAAAALAAIAAAAGAAcAAAAMAAEAAAAHAAYAAAAMAAIAAAAHAAcAAAANAAAAAAACAAMAAAAOAAAAAAACAAMAAAANAAEAAAAGAAYAAAANAAIAAAAGAAcAAAAOAAEAAAAHAAYAAAAOAAIAAAAHAAcAAAAPAAAAAAACAAMAAAAQAAAAAAACAAMAAAAPAAEAAAAGAAYAAAAPAAIAAAAGAAcAAAAQAAEAAAAHAAYAAAAQAAIAAAAHAAcAAAARAAAAAAACAAMAAAASAAAAAAACAAMAAAARAAEAAAAGAAYAAAARAAIAAAAGAAcAAAASAAEAAAAHAAYAAAASAAIAAAAHAAcAAAATAAAAAAACAAMAAAAUAAAAAAACAAMAAAATAAEAAAAGAAYAAAATAAIAAAAGAAcAAAAUAAEAAAAHAAYAAAAUAAIAAAAHAAcAAAAVAAAAAAACAAMAAAAWAAAAAAACAAMAAAAVAAEAAAAGAAYAAAAVAAIAAAAGAAcAAAAWAAEAAAAHAAYAAAAWAAIAAAAHAAcAAAAXAAAAAAACAAMAAAAYAAAAAAACAAMAAAAXAAEAAAAGAAYAAAAXAAIAAAAGAAcAAAAYAAEAAAAHAAYAAAAYAAIAAAAHAAcAAAAZAAAAAAACAAMAAAAaAAAAAAACAAMAAAAZAAEAAAAGAAYAAAAZAAIAAAAGAAcAAAAaAAEAAAAHAAYAAAAaAAIAAAAHAAcAAAAbAAAAAAACAAMAAAAcAAAAAAACAAMAAAAbAAEAAAAGAAYAAAAbAAIAAAAGAAcAAAAcAAEAAAAHAAYAAAAcAAIAAAAHAAcAAAAdAAAAAAACAAMAAAAeAAAAAAACAAMAAAAdAAEAAAAGAAYAAAAdAAIAAAAGAAcAAAAeAAEAAAAHAAYAAAAeAAIAAAAHAAcAAAAfAAAAAAACAAMAAAAgAAAAAAACAAMAAAAfAAEAAAAGAAYAAAAfAAIAAAAGAAcAAAAgAAEAAAAHAAYAAAAgAAIAAAAHAAcAAAAhAAAAAAACAAMAAAAiAAAAAAACAAMAAAAhAAEAAAAGAAYAAAAhAAIAAAAGAAcAAAAiAAEAAAAHAAYAAAAiAAIAAAAHAAcAAAAjAAAAAAACAAMAAAAkAAAAAAACAAMAAAAjAAEAAAAGAAYAAAAjAAIAAAAGAAcAAAAkAAEAAAAHAAYAAAAkAAIAAAAHAAcAAAAlAAAAAAACAAMAAAAmAAAAAAACAAMAAAAlAAEAAAAGAAYAAAAlAAIAAAAGAAcAAAAmAAEAAAAHAAYAAAAmAAIAAAAHAAcAAAAnAAAAAAADAAIAAAAoAAAAAAADAAIAAAAnAAEAAAADAAIAAAAnAAIAAAADAAIAAAAoAAEAAAABAAIAAAAoAAIAAAABAAIAAAD//x0AAAADAAIAAAD//xwAAAADAAIAAAD//xsAAAADAAIAAAD//xoAAAADAAIAAAD//xkAAAADAAIAAAD//xgAAAADAAIAAAD//xcAAAADAAIAAAD//xYAAAADAAIAAAD//xUAAAADAAIAAAD//xEAAAADAAIAAAD//xAAAAADAAIAAAD//w8AAAADAAIAAAD//w4AAAADAAIAAAD//w0AAAADAAIAAAD//wwAAAADAAIAAAD//wsAAAADAAIAAAD//woAAAADAAIAAAD//wkAAAADAAIAAAD//wgAAAADAAIAAAD//wcAAAADAAIAAAD//wYAAAADAAIAAAD//wUAAAADAAIAAAD//wQAAAADAAIAAAD//wMAAAADAAIAAAD//wIAAAADAAIAAAD//wEAAAADAAIAAAD//wAAAAADAAIAAAD/////AAADAAIAAAD//xIAAAADAAIAAAD//xMAAAADAAIAAAD//xQAAAADAAIAAAAAAP//AAADAAIAAAABAP//AAADAAIAAAACAP//AAADAAIAAAADAP//AAADAAIAAAAEAP//AAADAAIAAAAFAP//AAADAAIAAAAGAP//AAADAAIAAAAHAP//AAADAAIAAAAIAP//AAADAAIAAAAJAP//AAADAAIAAAAKAP//AAADAAIAAAALAP//AAADAAIAAAAMAP//AAADAAIAAAANAP//AAADAAIAAAAOAP//AAADAAIAAAAPAP//AAADAAIAAAAQAP//AAADAAIAAAARAP//AAADAAIAAAASAP//AAADAAIAAAATAP//AAADAAIAAAAUAP//AAADAAIAAAAVAP//AAADAAIAAAAWAP//AAADAAIAAAAXAP//AAADAAIAAAAYAP//AAADAAIAAAAZAP//AAADAAIAAAAaAP//AAADAAIAAAAbAP//AAADAAIAAAAcAP//AAADAAIAAAAdAP//AAADAAIAAAAeAP//AAADAAIAAAAfAP//AAADAAIAAAAgAP//AAADAAIAAAAhAP//AAADAAIAAAAiAP//AAADAAIAAAAjAP//AAADAAIAAAAkAP//AAADAAIAAAAlAP//AAADAAIAAAAmAP//AAADAAIAAAAnAP//AAADAAIAAAAoAP//AAADAAIAAAAoABgAAAADAAIAAAAoABkAAAADAAIAAAA=")
tile_set = SubResource("TileSet_2gpjr")

[node name="player1" parent="." node_paths=PackedStringArray("opponent", "frame_data_bar") instance=ExtResource("3_qb37m")]
position = Vector2(100, 420)
opponent = NodePath("../player2")
frame_data_bar = NodePath("../framedatabar")

[node name="player2" parent="." node_paths=PackedStringArray("opponent", "frame_data_bar") instance=ExtResource("1_gdyuf")]
position = Vector2(500, 380)
input_prefix = "p2_"
opponent = NodePath("../player1")
frame_data_bar = NodePath("../framedatabar")

[node name="hpbar1" parent="." instance=ExtResource("4_sblbn")]
offset_left = 280.0
offset_top = 32.0
offset_right = 536.0
offset_bottom = 64.0
scale = Vector2(-1, 1)

[node name="hpbar2" parent="." instance=ExtResource("4_sblbn")]
offset_left = 360.0
offset_top = 32.0
offset_right = 616.0
offset_bottom = 64.0

[node name="score" type="Label" parent="."]
offset_left = 288.0
offset_top = 32.0
offset_right = 352.0
offset_bottom = 63.0
text = "0 : 0"
label_settings = SubResource("LabelSettings_q2cft")
horizontal_alignment = 1
vertical_alignment = 1

[node name="framedatabar" type="Panel" parent="."]
offset_left = 8.0
offset_top = 440.0
offset_right = 632.0
offset_bottom = 472.0
script = ExtResource("6_lrnrk")

[connection signal="damaged" from="player1" to="." method="_on_player_1_damaged"]
[connection signal="died" from="player1" to="." method="_on_player_1_died"]
[connection signal="damaged" from="player2" to="." method="_on_player_2_damaged"]
[connection signal="died" from="player2" to="." method="_on_player_2_died"]
